# eigen-squared

./: .gitignore  README.md  main.py  pyproject.toml
eigen_squared/: eigen_types.py  matrix_checks.py  matrix_ops.py  norms.py  shifts.py
eigen_squared/decompositions/: Cholesky.py  LU.py  QR.py  __init__.py
eigen_squared/eigenpairs/: QR.py  eigenvector_guesses.py  lanczos.py  power_iteration.py  rayleigh_iteration.py
tests/: test_checks.py  test_decompositions.py  test_matrix_checks.py
